Fix number align in views
CMK-6429

--- a/web/htdocs/themes/facelift/scss/_pages.scss
+++ b/web/htdocs/themes/facelift/scss/_pages.scss
@@ -370,7 +370,6 @@ table.data {
     }
 
     &.number {
-      text-align: right;
       white-space: nowrap;
     }
 
